updated metadata and microdata for Google search optimization

--- a/_posts/2014-04-29-Colophon.md
+++ b/_posts/2014-04-29-Colophon.md
@@ -2,6 +2,7 @@
 layout: post
 title: Colophon
 date: 2014-04-29
+description: In this colophon for code.brianlundin.com, I offer a summary of the tools that I use to build and run this website.
 ---
 
 > **Colophon** \ˈkä-lə-fən, -ˌfän\
