updated bower components and gems

--- a/_posts/2014-04-29-Colophon.md
+++ b/_posts/2014-04-29-Colophon.md
@@ -19,8 +19,8 @@ The colophon is set for a comeback. With so many new digital publishing options,
 
 * [Jekyll](http://jekyllrb.com): static blogging software
 * [Typekit.com](https://typekit.com): fonts
-* [Atom](http://atom.io): text editor (coding)
-* [Byword](http://bywordapp.com): text editor (markdown files and posts)
+* [Sublime Text 2](http://www.sublimetext.com/2): development
+* [Ulysses](http://www.ulyssesapp.com/): text editor (markdown files and posts)
 * [Marked 2](http://marked2app.com): markdown preview
 * [Alfred 2](http://www.alfredapp.com)—[Publishing workflow](https://github.com/dougrice/jekyll-alfred2): writing and publishing workflow
 * [Photoshop CC](http://www.photoshop.com/products/photoshop): image and photo editing
